--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang=""en>
 <head>
-   <title>Alert Examples</title>
+   <title>Alert Examples!!!</title>
    <meta> charst="uft-8">
 </head>
 <body>
   
-   <h3>Alert Example in VS Code</h3>
+   <h3>Alert Example in VS Code!!!</h3>
    <strong>Success!</strong> Represents a sucessful or positive action.</br>
    <strong>Info!</strong> Represents a neytral informative change.</br>
+   <strong>Warning!</strong> Respresents a warning that needs attention.</br>
+   <strong>Danger!</strong> Respresents a dangerous negative action.</br>
 </body>
 </html>
